# housing_statistic

./: .gitattributes  .gitignore  housing_domain_comparison.csv  main.py  pyproject.toml
data/: .~lock.connectivity_metrics_2025.csv#
